Add actualization index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="/seccion_1/reto3_S1.js"></script> -->
     <!-- <script src="/seccion_1/reto4_S1.js"></script> -->
     <!-- <script src="/seccioon_2/reto1_S2.js"></script> -->
-    <script src="/seccioon_2/reto2_S2.js"></script>
+    <!-- <script src="/seccioon_2/reto2_S2.js"></script> -->
+    <script src="/seccioon_2/reto3_S2.js"></script>
 </body>
 </html>
